# visage

./: .gitignore  README.md  brain.py  package.json  protocol.py  pyproject.toml
bridge/: emote_ws.py  index.js  package.json
ears/: package.json  server.js
ears/public/: index.html
eyes/: index.js  package.json
old/: face.py  interp.py  visage.py
owl/: components.md  constraints.md  product.md
owl/components/: receiver.md  renderer.md  server.md
src/: features.ts  pricing.ts  registry.ts  types.ts  weights.json
styles/: another_world.json
tts/: constraints.md  package-lock.json  package.json  product.md  test-marker.json
tts/src/: lipsync.js  markers.js  phonemes.js  server.js  sync-test.js  test.js
visage/: __init__.py  __main__.py  app.py  backend.py  emote.py  face_model.py  receiver.py  style.py
visage/backends/: __init__.py  pygame_aw.py
web/: package-lock.json  package.json  server.js
web/public/: emotion.js  index.html  main.js  receiver.js  renderer.js
