[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visage"
version = "0.1.0"
description = "Animated face renderer for MocapFrame streams — plugin backend architecture"
requires-python = ">=3.10"
dependencies = ["pygame>=2.5", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["visage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
